 + Themes can now use flakes with negative falling speed (rising flakes)
 + Themes can now contain custom sound files: splash.ogg Droplet1.ogg Droplet2.ogg Droplet3.ogg skip.ogg
 + Simplified hat format for unanimated hats; a single 32×32 image is enough. For clan hats, use size 64×32, with the color overlay at the right

Lua-API:
 + New call: SetCinematicMode(enable) -- e.g. for cutscenes etc.
 + New call: GetAmmoName(ammoType [, ignoreOverwrite]) -- returns the localized name for the specified ammoType
 + New call: GetVisualGearType(vgUid) -- returns the visual gear type
 + New call: SetAmmoTexts(ammoType, name, caption, description) -- Overwrite displayed name and description of an ammo type
 + New call: SetAmmoDescriptionAppendix(ammoType, descAppend) -- Append a custom text to the description of an ammo type without overwriting it
 + New call: GetHogFort(gearUid) -- Returns the name of the fort of the hog's team
 + New call: PlaceRubber(x, y, frameIdx) -- Places a rubber
 + New hook: onVisualGearAdd(vgUid) -- called when a visual gear is added
 + New hook: onVisualGearDelete(vgUid) -- called when a visual gear is deleted
 + New variable: AirMinesNum -- Number of air mines being placed on a medium-sized map
 + New variable: WorldEdge -- World edge type (weNone, weWrap, weBounce, weSea)
 + Locale library: loc_noop -- Mark string for translation but don't translate it
 + Animate library: AnimInit([startAnimating]) -- New parameter startAnimating: if true, will start game in cinematic mode with most controls disabled. Must play an animation after that

0.9.21 -> 0.9.22
 + New Weapon / Map object: AirMine (floating mine that will follow nearby hedgehogs)
 + Extensive changes to TechRacer: Variable terrain types, enhanced parameters, hwmap interpreter, fuel limiter, etc. 
 + HedgeEditor - create missions/etc. in-game! see http://hedgewars.org/HedgeEditor
 + Map previews can now take script parameters into account and preview waypoints in TechRacer